[gd_scene load_steps=4 format=3 uid="uid://b2uoxn7ts63w7"]

[ext_resource type="Script" uid="uid://c2cr8fflw6b0v" path="res://ui/scritps/hud.gd" id="1_276te"]
[ext_resource type="Texture2D" uid="uid://8lwnrtta7kb5" path="res://assets/hud/paw_rescue_logo.png" id="1_rbyyf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_276te"]
bg_color = Color(1, 1, 1, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_276te")

[node name="panel_background" type="Panel" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("StyleBoxFlat_276te")

[node name="margin_container_logo" type="MarginContainer" parent="panel_background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -596.0
offset_top = -478.0
offset_right = 682.0
offset_bottom = -151.0

[node name="logo" type="Sprite2D" parent="panel_background/margin_container_logo"]
position = Vector2(608, 226)
scale = Vector2(0.588235, 0.588235)
texture = ExtResource("1_rbyyf")

[node name="margin_container_buttons" type="MarginContainer" parent="panel_background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -13.0
offset_right = 32.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="box_container_buttons" type="VBoxContainer" parent="panel_background/margin_container_buttons"]
layout_mode = 2

[node name="button_new_game" type="Button" parent="panel_background/margin_container_buttons/box_container_buttons"]
layout_mode = 2
text = "New Game"

[node name="button_options" type="Button" parent="panel_background/margin_container_buttons/box_container_buttons"]
layout_mode = 2
text = "Options"

[node name="button_exit" type="Button" parent="panel_background/margin_container_buttons/box_container_buttons"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="panel_background/margin_container_buttons/box_container_buttons/button_new_game" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="panel_background/margin_container_buttons/box_container_buttons/button_options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="panel_background/margin_container_buttons/box_container_buttons/button_exit" to="." method="_on_button_exit_pressed"]
